# engine

./: .gitignore
openGL/: .cproject  .project  Main.cpp
openGL/Debug/: Main.d  makefile  openGL  subdir.mk
src/: CMakeLists.txt  main.cpp
src/exercises/: CMakeLists.txt  Chapter2.cpp  Chapter2.h  Main.cpp
src/geometry/: CMakeLists.txt  Triangle.h
src/math/: CMakeLists.txt  CartisanCoordinates2.h  CartisanCoordinates3.h  Line2.h  Line3.h  Plane.h  Point2.h  Point3.h  PolarCoordinates.h  SphericalCoordinates.h  Vector2.h  Vector3.h
src/playground/: Backstabbing.cpp  CMakeLists.txt  Jump.cpp  Jump.h  Player.cpp  Player.h  Track.cpp
src/rendering/: CMakeLists.txt
src/test/: CMakeLists.txt  Line2Test.cpp  Line3Test.cpp  PlaneTest.cpp  Point2Test.cpp  Point3Test.cpp  Vector2Test.cpp  Vector3Test.cpp
